--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -283,5 +283,7 @@
     <string name="gdrive_disclaimer_2" formatted="true">%1$s\'s APIs allow you to send media to your %2$s via %3$s. %3$s, however, cannot see or access anything on your %2$s, which you didn\'t create with %3$s in the first place.</string>
     <string name="gdrive_auth_insufficient_permissions" formatted="true">%1$s cannot work properly if you don\'t allow it to write to your %2$s. Please try the authorization again and make sure to grant all the access permissions listed.</string>
     <string name="new_user">new user</string>
+    <string name="tor_not_available_dialog">Tor integration is not available on Android 14 and above. You can use Orbot VPN for routing Save through the Tor network.</string>
+    <string name="deactivate_tor">Deactivate Tor</string>
 
 </resources>
