app-masking POC

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,7 @@
 
     <!-- Activities -->
     <string name="app_name" translatable="false">Save</string>
+    <string name="app_name_masked" translatable="false">Calculator</string>
     <string name="app_subtext">Archive Your Media\n<a href="#">learn more</a></string>
     <string name="web_client_id">741316235729-ohg8quvto8ajl8qpil4r9rm1o3gfml3t.apps.googleusercontent.com</string>
 
@@ -342,6 +343,8 @@
     <string name="pref_media_servers">pref_media_servers</string>
     <string name="pref_media_folders">pref_media_folders</string>
     <string name="pref_app_passcode" translatable="false">passcode_enabled</string>
+    <string name="pref_app_masking" translatable="false">app_masking_enabled</string>
+    <string name="label_app_masking" translatable="false">App Masking</string>
     <string name="pref_title_secure">Secure</string>
     <string name="pref_title_archive">Archive</string>
 </resources>
