--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -259,11 +259,11 @@
     <string name="preview_media">Preview Media</string>
     <string name="add_more">Add More</string>
     <string name="select_all">Select All</string>
-    <string name="got_it">Got it</string>
+    <string name="lbl_got_it">Got it</string>
     <string name="do_not_show_me_this_again">Do not show me this again</string>
     <string name="edit_multiple">Edit Multiple</string>
-    <string name="press_and_hold_options_media_screen_title">Add Media Options</string>
-    <string name="press_and_hold_options_media_screen_message">Tap + to upload an image. Press and hold for more options.</string>
+    <string name="press_and_hold_options_media_screen_title">Add Media</string>
+    <string name="press_and_hold_options_media_screen_message">Tap + to pick from image gallery or press and hold to add media from other apps.</string>
     <string name="press_and_hold_to_select_and_edit_multiple_media">Press and hold to select and edit multiple media.</string>
     <string name="once_uploaded_you_will_not_be_able_to_edit_media">Once uploaded, you will not be able to edit media</string>
     <string name="edit_media_info">Edit Media Info</string>
@@ -344,4 +344,14 @@
     <string name="pref_app_passcode" translatable="false">passcode_enabled</string>
     <string name="pref_title_secure">Secure</string>
     <string name="pref_title_archive">Archive</string>
+
+
+    <!-- General -->
+    <string name="label_success_title">Success!</string>
+    <string name="label_warning_title">Warning!</string>
+    <string name="label_info_title">Info!</string>
+    <string name="label_got_it">Got it</string>
+
+    <!-- Create New Folder -->
+    <string name="create_folder_ok_message">You have added a folder successfully</string>
 </resources>
