--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -215,7 +215,7 @@
     <string name="preview_media">Ortam ön izlemesi</string>
     <string name="add_more">Başka ekle</string>
     <string name="select_all">Tümünü seç</string>
-    <string name="got_it">Anladım</string>
+    <string name="lbl_got_it">Anladım</string>
     <string name="do_not_show_me_this_again">Bunu bir daha gösterme</string>
     <string name="edit_multiple">Birkaç ögeyi düzenle</string>
     <string name="press_and_hold_to_select_and_edit_multiple_media">Birkaç ortamı seçmek ve düzenlemek için basılı tutun</string>
