--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,7 +124,7 @@
 
     <string name="importing_media">Importing media…</string>
 
-    <string name="title_welcome">Welcome</string>
+    <string name="title_welcome">Welcome!</string>
 
     <string name="action_privacy">Privacy Policy</string>
     <string name="action_about">About %s</string>
@@ -142,7 +142,7 @@
 
     <!-- Strings related to Settings -->
 
-    <string name="tap_to_add">Tap the button below to add media.</string>
+    <string name="tap_to_add">Tap the button below to add media</string>
     <string name="to_get_started_connect_to_a_server_to_store_your_media">To get started, connect to a server to store your media.</string>
     <string name="to_get_started_more_hint">You can add multiple private servers and\none IA or DWeb server account at any time.</string>
     <string name="in_the_side_menu_you_can_add_another_server_and_connect_to_multiple_servers">In the side menu, you can add another server and connect to multiple servers</string>
@@ -160,10 +160,10 @@
     <string name="create_a_new_folder">Create a New Folder</string>
     <string name="create_new_folder_title">First, please name your folder</string>
     <string name="create_new_folder_subtitle">This folder will be created on your server and automatically added on Save</string>
-    <string name="create_new_folder_hint">Enter Folder Name</string>
+    <string name="create_new_folder_hint">Enter folder name</string>
     <string name="edit">Edit</string>
     <string name="menu_done">Done</string>
-    <string name="remove_from_app">Remove from App</string>
+    <string name="remove_from_app">Remove from app</string>
     <string name="action_remove_project">Are you sure you want to remove your project?</string>
     <string name="remove">Remove</string>
     <string name="action_archive_project">Archive Project</string>
@@ -173,7 +173,7 @@
     <string name="secret_key">Secret Key</string>
     <string name="info_archiveorg_keys"><b><i>Save</i></b> needs your Internet Archive account\'s API keys to be able to upload media.</string>
     <string name="action_acquire_keys">Acquire Keys</string>
-    <string name="new_folder">Add Folder</string>
+    <string name="new_folder">New Folder</string>
     <string name="please_do_not_include_special_characters_in_the_name">Please do not include special characters in the name.</string>
     <string name="are_you_sure_you_want_to_remove_this_server_from_the_app">Are you sure you want to remove this server from the app?</string>
     <string name="folder_name_already_exists">Folder name already exists.</string>
@@ -221,7 +221,7 @@
     <string name="back">Back</string>
     <string name="my_media">My Media</string>
     <string name="if_you_do_not_have_existing_keys_learn_how_to_acquire_keys">If you do not have existing keys, <b>learn how</b> to acquire keys.</string>
-    <string name="server_info">Server Info</string>
+    <string name="server_info">Server info</string>
     <string name="enter_url">Enter URL</string>
     <string name="account">Account</string>
     <string name="general">General</string>
