--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -134,6 +134,8 @@
     <string name="title_activity_upload_manager">Upload Manager</string>
 
     <string name="uploads">Uploads</string>
+    <string name="upload_manager_screen_title">Edit Queue</string>
+    <string name="upload_manager_screen_subtitle">Uploading is paused</string>
     <string name="uploading">Uploading…</string>
     <string name="uploading_left">Uploading… (%d left)</string>
     <string name="uploads_notification_descriptions">These notifications show up while this app is performing media uploads.</string>
@@ -144,7 +146,8 @@
 
     <string name="tap_to_add">Tap the button below to add media</string>
     <string name="to_get_started_connect_to_a_server_to_store_your_media">To get started, connect to a server to store your media.</string>
-    <string name="to_get_started_more_hint">You can add multiple private servers and\none IA or DWeb server account at any time.</string>
+    <string name="to_get_started_more_hint_dweb">You can add multiple private servers and\none IA or DWeb server account at any time.</string>
+    <string name="to_get_started_more_hint">You can add multiple private servers and\none IA account at any time.</string>
     <string name="in_the_side_menu_you_can_add_another_server_and_connect_to_multiple_servers">In the side menu, you can add another server and connect to multiple servers</string>
     <string name="send_directly_to_a_private_server">Connect to a secure WebDAV server</string>
     <string name="upload_to_the_internet_archive">Connect to a free public or paid private server</string>
@@ -180,6 +183,7 @@
     <string name="dropbox">Dropbox</string>
     <string name="metadata">Metadata</string>
 
+    <string name="btn_lbl_remove_media">Remove Media</string>
     <string name="confirm_remove_media">Are you sure you want to remove this Media?</string>
 
     <string name="popup_flag_title">Flag Significant Content</string>
@@ -342,6 +346,7 @@
     <string name="label_create_login">Create one</string>
     <string name="prompt_no_account">No account?</string>
     <string name="action_continue">Continue</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <!-- Preference Titles -->
@@ -375,6 +380,7 @@
     <string name="pref_key_proof_mode" translatable="false">pref_proof_mode</string>
     <string name="pref_key_use_proof_mode" translatable="false">pref_use_proofmode</string>
     <string name="pref_key_use_tor" translatable="false">pref_use_tor</string>
+    <string name="pref_key_use_dark_mode">pref_is_dark_mode</string>
     <string name="pref_key_about_app" translatable="false">pref_about_app</string>
     <string name="pref_key_privacy_policy" translatable="false">pref_privacy_policy</string>
     <string name="pref_key_app_version" translatable="false">pref_app_version</string>
