Updated the pref key

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -379,7 +379,7 @@
 
     <string name="pref_app_passcode" translatable="false">passcode_enabled</string>
     <string name="pref_key_proof_mode" translatable="false">pref_proof_mode</string>
-    <string name="pref_key_use_proof_mode" translatable="false">pref_use_proofmode</string>
+    <string name="pref_key_use_proof_mode" translatable="false">use_proofmode</string>
     <string name="pref_key_use_tor" translatable="false">pref_use_tor</string>
     <string name="pref_key_use_dark_mode">pref_is_dark_mode</string>
     <string name="pref_key_about_app" translatable="false">pref_about_app</string>
